--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -55,9 +55,6 @@
   margin: 0 auto;
 }
 
-// .offer__slogan-gap {
-//   display: none;
-// }
 
 @media (min-width: @tablet-width) {
   .offer__wrapper {
@@ -150,6 +147,8 @@
 @media (min-width: @desktop-width) {
   .offer__wrapper {
     margin-bottom: 0;
+    background-position: 50% 0;
+    background-size: 2850px;
   }
 
   .offer__wrapper-time .opportunity {
@@ -159,11 +158,11 @@
   .offer__header {
     background-color: #ffffff;
     max-width: 750px;
-    margin-bottom: 75px;
   }
 
   .offer__opportunity {
     margin: 0;
+    padding-top: 63px;
   }
 
   .offer__opportunity-image {
