--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -11,7 +11,7 @@
   margin: 0 auto;
 }
 
-.page-main__form__agitation {
+.page-main__form-agitation {
   color: #283645;
   font-size: 14px;
   line-height: 30px;
@@ -21,7 +21,7 @@
   margin-top: 45px;
 }
 
-.page-main__form__agitation-text {
+.page-main__form-agitation-text {
   display: none;
 }
 
@@ -38,16 +38,16 @@
   }
 
   .page-main__image-panorama {
-    height: 509px;
+    min-height: 509px;
   }
 
-  .page-main__form__agitation {
+  .page-main__form-agitation {
     font-size: 18px;
     max-width: 560px;
     padding-top: 29px;
   }
 
-  .page-main__form__agitation-text {
+  .page-main__form-agitation-text {
     display: inline;
     margin: 0;
   }
@@ -64,12 +64,12 @@
     padding: 0;
   }
 
-  .page-main__form__agitation {
+  .page-main__form-agitation {
     max-width: 780px;
     padding-top: 29px;
   }
 
   .page-main__image-panorama {
-    height: 505px;
+    min-height: 505px;
   }
 }
