--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -96,7 +96,6 @@
   .reviews__wrapper {
     box-sizing: border-box;
     max-width: 940px;
-    padding-bottom: 48px;
   }
 
   .reviews__item {
@@ -137,7 +136,7 @@
   .reviews__button--prev::before {
     content: "";
     position: absolute;
-    background: #bec2c7;
+    background: #283645;
     opacity: 0.3;
     width: 30px;
     height: 2px;
@@ -153,7 +152,7 @@
   .reviews__button--prev::after {
     content: "";
     position: absolute;
-    background: #bec2c7;
+    background: #283645;
     opacity: 0.3;
     width: 30px;
     height: 2px;
@@ -166,7 +165,7 @@
   .reviews__button--prev:hover::after,
   .reviews__button--next:hover::before,
   .reviews__button--next:hover::after {
-    background: #7e868f;
+    background: #283645;
     opacity: 0.6;
   }
 
@@ -174,7 +173,7 @@
   .reviews__button--prev:active::after,
   .reviews__button--next:active::before,
   .reviews__button--next:active::after {
-    background: #e9ebec;
+    background: #283645;
     opacity: 0.1;
   }
 
@@ -193,7 +192,7 @@
   .reviews__button--next::before {
     content: "";
     position: absolute;
-    background: #bec2c7;
+    background: #283645;
     opacity: 0.3;
     width: 30px;
     height: 2px;
@@ -205,7 +204,7 @@
   .reviews__button--next::after {
     content: "";
     position: absolute;
-    background: #bec2c7;
+    background: #283645;
     opacity: 0.3;
     width: 30px;
     height: 2px;
