--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -47,6 +47,26 @@
   border-radius: 50%;
 }
 
+.slider__controls-item-2:hover::after {
+  background: #283645;
+  opacity: 0.6;
+}
+
+.slider__controls-item-3:hover::after {
+  background: #283645;
+  opacity: 0.6;
+}
+
+.slider__controls-item-2:active::after {
+  background: #283645;
+  opacity: 0.1;
+}
+
+.slider__controls-item-3:active::after {
+  background: #283645;
+  opacity: 0.1;
+}
+
 @media (min-width: @tablet-width) {
   .slider__controls {
     margin: 0 auto;
