--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -17,24 +17,26 @@
   text-align: center;
 }
 
-.contacts__info--call {
+.contacts__info-item--call {
   margin-bottom: 17px;
 }
 
-.contacts__info--mail {
+.contacts__info-item--mail {
   margin-bottom: 25px;
 }
 
-.contacts__info--mail a {
+.contacts__info-item--mail a {
   color: #d22856;
 }
 
-.contacts__info--mail a:hover {
+.contacts__info-item--mail a:hover {
   color: #283645;
+  text-decoration: underline;
 }
 
-.contacts__info--mail a:active {
+.contacts__info-item--mail a:active {
   color: #283645;
+  text-decoration: none;
   opacity: 0.3;
 }
 
@@ -78,7 +80,7 @@
     margin-bottom: 45px;
   }
 
-  .contacts__info--address {
+  .contacts__info-item--address {
     margin: 0 auto;
     margin-top: 23px;
   }
@@ -89,7 +91,7 @@
     margin-top: 68px;
     max-width: 940px;
     box-sizing: border-box;
-    margin-bottom: 41px;
+    margin-bottom: 20px;
   }
 
   .contacts__question {
@@ -102,11 +104,11 @@
     width: 300px;
   }
 
-  .contacts__info--mail {
+  .contacts__info-item--mail {
     order: 2;
   }
 
-  .contacts__info--address {
+  .contacts__info-item--address {
     margin: 0 auto;
   }
 
