--- a/source/less/blocks/social-links.less
+++ b/source/less/blocks/social-links.less
@@ -1,12 +1,12 @@
 .social-links {
   display: flex;
-  width: 181px;
   height: 50px;
   justify-content: space-between;
 }
 
 .social-links__item {
-  width: 47px;
+  margin: 0 7px;
+  width: 44px;
   border: 3px solid #e9ebec;
   border-radius: 50%;
 }
