--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,21 +1,22 @@
+@import "normalize.less";
+@import "general.less";
+@import "helpers.less";
+@import "fonts.less";
+@import "variables.less";
+@import "blocks/wrapper.less";
 @import "blocks/agitation.less";
 @import "blocks/comment.less";
 @import "blocks/download.less";
-@import "fonts.less";
 @import "blocks/logo-wrapper.less";
 @import "blocks/main-nav.less";
 @import "blocks/offer.less";
 @import "blocks/opportunity.less";
-@import "blocks/general.less";
-@import "blocks/helpers.less";
 @import "blocks/page-footer.less";
 @import "blocks/page-header.less";
 @import "blocks/page-main.less";
 @import "blocks/photo.less";
 @import "blocks/site-list.less";
 @import "blocks/user-photo.less";
-@import "normalize.less";
-@import "blocks/variables.less";
 @import "blocks/social-links.less";
 @import "blocks/content.less";
 @import "blocks/contacts.less";
@@ -25,3 +26,4 @@
 @import "blocks/form-competition";
 @import "blocks/tariff.less";
 @import "blocks/form-posting.less";
+@import "blocks/popup.less";
