Внесение корректировок для финальной проверки

--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -51,7 +51,6 @@
 }
 
 .comment__user-likes-sum {
-
   font-size: 12px;
   line-height: 24px;
   color: #d22856;
@@ -67,7 +66,11 @@
 @media (min-width: @tablet-width) {
   .comment__user-message {
     min-height: 48px;
-    margin-bottom: 11px;
+    margin-bottom: 12px;
+  }
+
+  .comment__user-message-panorama {
+    margin-bottom: 12px;
   }
 
   .comment__user-likes-panorama::after {
@@ -99,10 +102,6 @@
   .comment__user-likes-panorama::after {
     top: 30px;
     left: 896px;
-  }
-
-  .user-photo__comment-wrapper .comment__user-message-panorama {
-    height: 24px;
   }
 
   .comment__user-message {
