--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -2,7 +2,7 @@
   min-height: 240px;
 }
 
-@media (min-width: 660px) {
+@media (min-width: @tablet-width) {
   .photo__wrapper-image {
     min-height: 399px;
   }
