--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -33,10 +33,10 @@
 
 .reviews__list {
   text-align: center;
+}
 
-  .reviews__item--hide {
-    display: none;
-  }
+.reviews__list .reviews__item--hide {
+  display: none;
 }
 
 .reviews__button {
@@ -118,8 +118,6 @@
 
   .reviews__button {
     display: block;
-    // background: transparent;
-    // border: none;
   }
 
   .reviews__button--prev {
@@ -144,10 +142,6 @@
     top: 12px;
     transform: rotate(-45deg);
   }
-
-  // .reviews__button--prev:hover::before{
-  //   ba
-  // }
 
   .reviews__button--prev::after {
     content: "";
