--- a/source/less/blocks/tariff.less
+++ b/source/less/blocks/tariff.less
@@ -16,7 +16,7 @@
   display: none;
 }
 
-.tariff__table-head .qwerty {
+.tariff__table-head .tariff__empty {
   background: #f2f2f2;
   border: none;
   font-size: 0;
@@ -185,7 +185,6 @@
 }
 
 .tariff__slider-controls .tariff__slider-controls-item-2::after {
-
   content: "";
   position: absolute;
   top: 40px;
@@ -243,7 +242,6 @@
   }
 
   .tariff__table th {
-    // min-width: 197px;
     min-width: 155px;
   }
 
@@ -346,6 +344,10 @@
   .tariff__table-access-no {
     top: 15px;
     right: 99px;
+  }
+
+  .tariff__table-title {
+    font-size: 18px;
   }
 
   .tariff__table-title--hit::before {
