--- a/source/less/blocks/form-competition.less
+++ b/source/less/blocks/form-competition.less
@@ -11,7 +11,6 @@
 }
 
 .form-competition__user-name {
-  // outline: 2px solid blue;
   margin: 0;
 }
 
@@ -211,6 +210,10 @@
   font-size: 18px;
 }
 
+.form-competition__send-info span {
+  color: #d22856;
+}
+
 .form-competition__send-btn:disabled {
   background: #e5e5e5;
 }
@@ -218,6 +221,7 @@
 .form-competition__send-info {
   text-transform: uppercase;
   text-align: center;
+  color: #283645;
 }
 
 .form-competition__send-info-text {
@@ -434,7 +438,6 @@
     top: -2px;
   }
 
-
   .form-competition__area-text {
     margin-left: 60px;
     margin-top: 37px;
@@ -588,7 +591,8 @@
     width: 940px;
   }
 
-  .form-competition__send-info-text {
+  .form-competition__send-info .form-competition__send-info-text {
+    color: #283645;
     display: inline;
   }
 
