--- a/source/less/blocks/form-posting.less
+++ b/source/less/blocks/form-posting.less
@@ -8,13 +8,13 @@
   margin: 0 auto;
   font-size: 14px;
   line-height: 30px;
-  padding-top: 20px;
+  padding-top: 23px;
   color: #283645;
-  margin-bottom: 45px;
+  margin-bottom: 42px;
 }
 
 .form-posting__list-wrapper {
-  border-bottom: 1px solid #dddfe0;
+  border-bottom: 1px solid rgba(40, 54, 69, 0.1);
 }
 
 .form-posting__form {
@@ -154,16 +154,19 @@
 }
 
 .form-posting__item-icon-color {
-  fill: #b5b9be;
+  fill: #283645;
+  opacity: 0.3;
 }
 
 .form-posting__item-icon-color--crop {
   fill: #d22856;
+  opacity: 1;
 }
 
 .form-posting__item-icon:hover {
   .form-posting__item-icon-color {
-    fill: #8d949b;
+    fill: #283645;
+    opacity: 0.5;
   }
 }
 
@@ -210,7 +213,7 @@
     line-height: 30px;
     padding-top: 44px;
     max-width: 750px;
-    padding-bottom: 24px;
+    padding-bottom: 27px;
   }
 
   .form-posting__list {
@@ -242,7 +245,7 @@
   }
 
   .form-posting__item {
-    border-bottom: 1px solid #dddfe0;
+    border-bottom: 1px solid rgba(40, 54, 69, 0.1);
     margin-bottom: 19px;
     width: auto;
     padding-bottom: 8px;
@@ -329,6 +332,7 @@
 
   .form-posting__item-icon-color {
     fill: #d22856;
+    opacity: 1;
   }
 }
 
@@ -339,7 +343,7 @@
 
   .form-posting__title {
     padding-top: 3px;
-    padding-bottom: 22px;
+    padding-bottom: 26px;
   }
 
   .form-posting__form {
