--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,5 +1,4 @@
 .main-nav {
-  // position: relative;
   position: absolute;
   top: 0;
   left: 0;
@@ -19,17 +18,18 @@
   display: none;
 }
 
+.main-nav__logo-wrapper {
+  background: rgba(0, 0, 0, 0.3);
+  border-bottom: 1px solid #000001;
+}
+
 .main-nav__toggle::before {
   content: "";
-
   position: absolute;
   top: 9px;
   left: 3px;
-
-
   width: 36px;
   height: 5px;
-
   background-color: #ffffff;
   box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff;
 }
@@ -68,7 +68,7 @@
   transform: rotate(45deg);
 }
 
-.main-nav--opened .logo-wrapper {
+.main-nav--opened .main-nav__logo-wrapper {
   background: #283645;
 }
 
@@ -83,10 +83,6 @@
   opacity: 0.3;
 }
 
-// .main-nav--closed .main-nav__toggle:active::before {
-//   background-color: rgba(255, 255, 255, 0.3);
-//   box-shadow: 0 8px 0 0 rgba(255, 255, 255, 0.3), 0 16px 0 0 rgba(255, 255, 255, 0.3);
-// }
 .main-nav__wrapper {
   display: none;
 }
@@ -126,7 +122,7 @@
 }
 
 @media (min-width: @desktop-width) {
-  .main-nav--opened .logo-wrapper {
+  .main-nav--opened .main-nav__logo-wrapper {
     background: transparent;
     border: none;
   }
