--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -4,7 +4,6 @@
 }
 
 .page-footer__social-links {
-  // width: 150px;
   height: 55px;
   margin-bottom: 46px;
 }
@@ -21,6 +20,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 50px;
 }
 
 .page-footer__develop-link {
@@ -60,12 +60,6 @@
   }
 }
 
-// .page-footer__logo-image .qqqq:active{
-//   path{
-//     fill:green;
-//   }
-// }
-
 .page-footer__logo-image:hover {
   path {
     fill: #d22856;
@@ -97,7 +91,6 @@
   }
 
   .page-footer__social-links {
-    // width: 150px;
     height: 55px;
     margin: 0;
   }
@@ -123,7 +116,8 @@
 
 @media (min-width: @desktop-width) {
   .page-footer__wrapper {
-    padding: 30px 0;
+    padding-top: 30px;
+    padding-bottom: 64px;
     box-sizing: border-box;
     max-width: 940px;
   }
