--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -4,6 +4,13 @@
 
 .page-main__image-panorama {
   width: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.page-main__logo-image {
+  width: 100%;
+  display: block;
 }
 
 .page-main__wrapper {
@@ -23,10 +30,6 @@
 
 .page-main__form-agitation-text {
   display: none;
-}
-
-.page-main__logo-image {
-  width: 100%;
 }
 
 @media (min-width: @tablet-width) {
