--- a/source/less/blocks/user-photo.less
+++ b/source/less/blocks/user-photo.less
@@ -1,30 +1,30 @@
 .user-photo {
-  margin-bottom: 20px;
+  margin-bottom: 21px;
+}
 
-  &__comment {
-    background-color: #f2f2f2;
-  }
+.user-photo__comment {
+  background-color: #f2f2f2;
+}
 
-  &__name {
-    text-transform: uppercase;
-    background-color: #d22856;
-    color: #ffffff;
-    position: absolute;
-    top: 0;
-    right: 20px;
-    margin: 0;
-    font-size: 12px;
-    line-height: 35px;
-    width: 140px;
-    height: 36px;
-    padding-left: 21px;
-    box-sizing: border-box;
-  }
+.user-photo__name {
+  text-transform: uppercase;
+  background-color: #d22856;
+  color: #ffffff;
+  position: absolute;
+  top: 0;
+  right: 20px;
+  margin: 0;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 35px;
+  width: 140px;
+  height: 36px;
+  padding-left: 19px;
+  box-sizing: border-box;
 }
 
 .user-photo__picture {
   position: relative;
-  margin-bottom: -6px;
 }
 
 .user-photo--panorama {
@@ -79,7 +79,6 @@
   }
 
   .user-photo__comment-wrapper {
-
     padding-left: 27px;
     padding-bottom: 13px;
   }
